SNOW-105740: split tests by category